@startuml

abstract class Personnel{
-isActive:bool
-personnelId:unsigned int
+{abstract} canConductTreatment(specialization:Specialization):bool
+<<virtual>>getInfo(): string
}

Personnel <|-- Doctor
Personnel <|-- Nurse

!ifndef UKRYJ_NOTATKI

note right of Personnel
Abstrakcyjna klasa reprezentująca
personel.
Klasa ta dziedziczy z klasy person.
isActive - reprezentuje czy dany
człowiek przynależący do personelu
jest teraz dostępny. Jesli nie jest,
moze byc przyporzadkowany do uslugi.
personnelId - specjalny
identyfikator pracownika personelu.
canConductTreatment - metoda
sprawdzająca czy lekarz potrafi
dokonac zabiegu z dana specjalzaccji,
w przypadku pielegniarek zakladamy,
ze potrafi zrealizować każdy zabieg poza
neourlogicznym
end note

enum Equipment

Personnel ..> Equipment : używa >

!endif
@enduml